# hackinar-2025

./: .aider.chat.history.md  .aider.input.history  README.md  backend.py  file_upload.py  frontend.py  graph_config.py  hello.py  pyproject.toml  requirements.txt  tinydb_setup.py
