[project]
name = "hackinar-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pandas>=2.2.3",
    "plotly>=6.1.1",
    "python-multipart>=0.0.20",
    "streamlit>=1.45.1",
    "tinydb>=4.8.2",
    "uvicorn>=0.34.2",
]
